--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -7,7 +7,7 @@
       <%= link_to "ブログ", user_posts_path(@user), class: "" %>
     </li>
     <li>
-      <%= link_to "スケジュール", event_user_posts_path(@user), class: "" %>
+      <%= link_to "スケジュール", user_events_path(@user), class: "" %>
     </li>
     <li class="current">
       <%= link_to "動画", user_videos_path(@user), class: "" %>
