--- a/app/assets/stylesheets/members.scss
+++ b/app/assets/stylesheets/members.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the members controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.member_show{
+  display: flex;
+  max-width: 1200px;
+  padding: 0px;
+}
+
+.member_show li{
+  list-style: none;
+  width: 600px;
+}
+
+.idol_name{
+  font-size: 80px;
+}
+
+.member-font1{
+  font-size: 50px;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom: solid;
+  border-color: #741c9c;
+  border-width: 2px;
+}
+
+.snsbtniti{
+  display: flex;
+}
+
+.snsbtniti a{
+  font-size: 30px;
+}
