--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,55 +4,27 @@
 
 .container{
     width: max;
-    max-width: 960px;
+    max-width: 1200px;
     margin-right: auto;
     margin-left: auto;
   }
 
+  .gallery{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 
-  .card {
-    margin: 30px auto;
-    width: 900px;
-    background: #fff;
+  .post-image {
+
+    margin: 5px;
     border-radius: 0px;
     box-shadow: 0 2px 5px #ccc;
   }
-  .card-img {
-    border-radius: 5px 5px 0 0;
-    max-width: 100%;
-    height: auto;
-  }
+
   
-  .card-content {
-    padding: 20px;
-  }
-
-  .card-title {
-    font-size: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #333;
-  }
-
-  .card-text {
-    color: #777;
-    font-size: 14px;
-    line-height: 1.5;
-  }
-
-  .card-link {
-    text-align: center;
-    border-top: 1px solid #eee;
-    padding: 20px;
-  }
-  .card-link a {
-    text-decoration: none;
-    color: #0bd;
-    margin: 0 10px;
-  }
-  .card-link a:hover {
-    color: #0090aa;
-  }
+  
+  
   
   #submit-btn1{
   height:50px;
