--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,36 @@
-<h2>Sign up</h2>
+<h2 class="sgin_up text-center">新規作成</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="field text-center name_from">
     <%= f.label :ユーザーネーム %><br />
-    <%= f.text_field :name, class: "" %>
+    <%= f.text_field :name, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
   </div>
 
-  <div class="field">
+  <div class="field text-center">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
   </div>
 
-  <div class="field">
+  <div class="field text-center">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
   </div>
 
-  <div class="field">
+  <div class="field text-center">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions text-center my-4">
+    <%= f.submit "Sign up", class: "btn btn-outline-primary" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="actions text-center">
+  <%= render "devise/shared/links" %>
+</div>
