--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,9 +1,21 @@
 <div class="prfile text-center">
-    <a><%= @member.name %></a>
-    <h2><%= @member.profile %></h2>
-    <%= image_tag @member.image.variant(combine_options:{gravity: :center, resize:"1200x600^", crop:"1200x600+0+0"}).processed %>
+<h1 class="idol_name"><%= @member.name %></h1>
+  <ul class="member_show">
+    <li><%= image_tag @member.image.variant(combine_options:{gravity: :center, resize:"600x1200^", crop:"600x1200+0+0"}).processed %></li>
+    <li class="text-center">
+    <div class="member-font1">自己紹介</div>  
+    <h2 class="idol_profile mt-3"><%= @member.profile %></h2>
+   
 
-  <% if current_user.admin? %>
+    <ul class="snsbtniti mt-5">
+      <li>
+        <a href=<%"https://twitter.com/#{@member.twitter}" %> class="flowbtn fl_tw1"><i class="fab fa-twitter fa-2x"></i><div>Twitter</div></a>
+      </li>
+      <li><a href="インスタのプロフィールURL" class="flowbtn insta_btn1"><i class="fab fa-instagram fa-2x"></i><div>Instagram</div></a></li>
+    </ul>
+
+  </ul>
+  <% if current_user %>
     <%= link_to 'このメッセージを削除する', user_member_path(@user, @member), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
     <%= link_to 'このメッセージを編集する', edit_user_member_path(@user, @member) %>
   <% end %>
