[add update] event 参加表明　その他view修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,7 @@ body {
 }
 
 .navbar{
-  height: 70px;
+  height: 90px;
 }
 
   /*検索フォーム*/
@@ -143,4 +143,8 @@ body {
 
 .month1 {
   font-size: 60px;
+}
+
+.nav-item{
+  
 }
