--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,6 +4,21 @@
     <div class='text-center'><%= image_tag(@event.image.variant(gravity: :center, resize:"640x640^").processed, class: "img-fluid") %></div>
   <% end %>
   <div class="text-center event_title_show"><%= @event.title %></div>
+
+  
+  <ul class="ticketuser-list text-center">
+    <% @event.ticketed_users.first(6).each do |user| %>
+      <li><%= link_to image_tag(user.image.variant(combine_options:{gravity: :center, resize:"100x100^", crop:"100x100+0+0"}).processed, class: "ticket-image"), user_path(user) %></li>
+    <% end %>
+
+  <li id="tickets_buttons_<% @event.id %>" class="tickets">
+    <%= render partial: "tickets/ticket", locals: {event: @event} %>
+  </li>
+
+  </ul>
+
+
+ 
   
   <hr>
   <a class="event">イベント会場</a>
@@ -20,7 +35,7 @@
   <div class="text-center">
 
   
-  <% if current_user.admin? %> 
+  <% if !current_user.id == @event.user.id %> 
     <div class="text-right">
     <%= link_to 'このメッセージを削除する', user_event_path(@user, @event), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
     <%= link_to 'このメッセージを編集する', edit_user_event_path(@user, @event) %>
