--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,14 +9,14 @@
 }
 
 .font2{
-    font-size: 40px;
+    font-size: 55px;
     font-weight: bold;
     border-bottom: thick double #741c9c;
 }
 
 .font3{
   font-weight: bold;
-    font-size: 25px;
+    font-size: 35px;
 }
 
 
@@ -39,11 +39,13 @@
     display: flex;
     -webkit-justify-content: flex-start;
     justify-content: flex-start;
-
+    margin-top: 40px;
+    margin-bottom: 30px;
 }
 
 .button1 li{
   flex-grow: 1;
+  font-size: 25px;
 }
 
 
@@ -79,7 +81,7 @@
   
   .font4{
     font-weight: bold;
-    font-size: 35px;
+    font-size: 45px;
     width: 1120px;
     margin-left: auto;
     margin-right: auto;
@@ -96,6 +98,8 @@
   margin-left: auto;
   margin-right: auto;
   padding: 0px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 
