--- a/app/views/relationships/_follow_button.html.erb
+++ b/app/views/relationships/_follow_button.html.erb
@@ -3,12 +3,16 @@
     <% if current_user.following?(user) %>
       <%= form_with(model: current_user.relationships.find_by(follow_id: user.id), local: true, method: :delete) do |f| %>
         <%= hidden_field_tag :follow_id, user.id %>
-        <%= f.submit 'Unfollow', class: 'btn btn-danger' %>
+        <%= button_tag type: 'submit', class: 'btn btn-default' do %>
+          <i class="fas fa-star fa-3x follow"></i>
+        <% end %>
       <% end %>
     <% else %>
       <%= form_with(model: current_user.relationships.build, local: true) do |f| %>
         <%= hidden_field_tag :follow_id, user.id %>
-        <%= f.submit 'Follow', class: 'btn btn-primary' %>
+        <%= button_tag type: 'submit', class: 'btn btn-default' do %>
+          <i class="far fa-star fa-3x"></i>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
