--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,46 +1,72 @@
-<% if !@user.admin? %> 
+<h2 class="sgin_up text-center">プロフィール編集</h2>
 
+<% if @user.admin? %> 
     <%= form_for(@user) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+    <div class="form-group text-center field">
+      <%= f.label :name, '名前', class: "mt-3" %><br>
+      <%= f.text_field :name, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
+    </div>
 
-      <%= f.label :プロフィール %>
-      <%= f.text_field :profile %>
+    <div class="form-group text-center field">
+      <%= f.label :profile, 'プロフィール' %><br>
+      <%= f.text_field :profile, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
+    </div>
 
-      <%= f.label :年齢 %>
-      <%= f.select :age, options_for_select((1..100).to_a), { include_blank: '選択'} %>
+    <div class="form-group text-center field">
+      <%= f.label :age, '年齢' %><br>
+      <%= f.select :age, options_for_select((1..100).to_a), { include_blank: '選択'}, class: "form-select", label: "Default select example", style: "width: 200px;" %>
+    </div>
 
-      <%= f.label :性別 %>
-      <%= f.select :gender, User.genders.keys, {} %>
+    <div class="form-group text-center field">
+      <%= f.label :gender, '性別' %><br>
+      <%= f.select :gender, User.genders.keys, {},class: "form-select", label: "Default select example", style: "width: 200px;" %>
+    </div>
 
-      <%= f.label :地域 %>
-      <%= f.select :area, User.areas.keys, {} %>
+    <div class="form-group text-center field">
+      <%= f.label :area, '地域' %><br>
+      <%= f.select :area, User.areas.keys, {},class: "form-select", label: "Default select example", style: "width: 200px;" %>
+    </div>
 
-      <%= f.label :image %>
-      <%= f.file_field :image %>
-
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+    <div class="form-group text-center field">
+      <%= f.label :image, 'プロフィール画像' %><br>
+      <%= f.file_field :image, class: "form-control image-input", type:"file", id:"formFile", style: "width: 500px;" %>
+    <div>
+    
+    <div class="form-group text-center field mt-5">
+      <%= f.submit "変更を保存", class: "btn btn-large btn-primary" %>
+    </div>
     <% end %>
 <% else %>
     <%= form_for(@user) do |f| %>
 
+    <div class="form-group text-center field">
+      <%= f.label :name, 'チーム名', class: "mt-3 " %><br>
+      <%= f.text_field :name, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
+    </div>
 
-      <%= f.label :チーム名 %>
-      <%= f.text_field :name %>
+    <div class="form-group text-center field">
+      <%= f.label :profile< 'プロフィール' %><br>
+      <%= f.text_field :profile, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
+    </div>
 
-      <%= f.label :プロフィール %>
-      <%= f.text_field :profile %>
+    <div class="form-group text-center field">
+      <%= f.label :gender, '性別' %><br>
+      <%= f.select :gender, User.genders.keys, {},class: "form-select", label: "Default select example", style: "width: 200px;" %>
+    </div>
 
-      <%= f.label :性別 %>
-      <%= f.select :gender, User.genders.keys, {} %>
+    <div class="form-group text-center field">
+      <%= f.label :area, '活動地域' %><br>
+      <%= f.select :area, User.areas.keys, {}, class: "form-select", label: "Default select example", style: "width: 200px;" %>
+    </div>
 
-      <%= f.label :活動地域 %>
-      <%= f.select :area, User.areas.keys, {} %>
+    <div class="form-group text-center field">
+      <%= f.label :image, 'プロフィール画像' %><br>
+      <%= f.file_field :image, class: "text-center" %>
+    </div>
 
-      <%= f.label :image %>
-      <%= f.file_field :image %>
-
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
-    <% end %>
-
+    <div class="form-group text-center field">
+      <%= f.submit "Save changes", class: "btn btn-large btn-primary text-center" %>
+    </div>
+    
+  <% end %>
 <% end %>
