--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,9 +19,15 @@
     </li> 
   </ul>
 
-	<h1 class="user-name"><%= "ABOUT #{@user.name}" %></h1>
+  
+	<div >
+    <h1 class="user-name"><%= "ABOUT #{@user.name}" %></h1>
+  </div>
+  <div class="follow_button text-right">
+    <%= render 'relationships/follow_button', user: @user %>
+  </div>
 
-  <div class=""><%= render 'relationships/follow_button', user: @user %></div>
+  <div class=""></div>
 
 	<p class="profile text-center"><%= @user.profile %></p>
 
@@ -54,7 +60,7 @@
   <% @events.each do |event| %>
     <section class="card4">
       <%= link_to user_events_path(@user, event.id), class: "" do %>
-        <div class=""><%= image_tag(event.image.variant(resize:'1000x300'), class: "img-fluid card-img1") %></div>
+        <div class=""><%= image_tag(event.image.variant(gravity: :center, resize: '550x400' ,crop: "500x300+0+0").processed, class: "img-fluid card-img1") %></div>
         <div>
           <a class="card-title4"><%= event.title %></a><br>
           <a class="card-text4"><%= event.start_time.strftime("%m月%d日") %></a><br>
@@ -69,7 +75,7 @@
   <% @posts.each do |post| %>
     <section class="card4">
       <%= link_to user_post_path(@user, post.id), class: "" do %>
-        <div class=""><%= image_tag(post.image.variant(resize:'500x700'), class: "img-fluid card-img1") %></div>
+        <div class=""><%= image_tag(post.image.variant(gravity: :center, resize: '550x400' ,crop: "500x300+0+0").processed, class: "img-fluid card-img1") %></div>
         <div>
           <a class="card-title4"><%= post.title %></a><br>
 
@@ -81,80 +87,110 @@
 
 
 <% else %>
-  <div class="text-right"><%= link_to "編集する", edit_user_path %></div>
-  <div class="text-center">
-    <ul class="list-inline" style="width: 1200px;">
-      <li class="list-inline-item">
 
-        <div class="mt-5"><%= image_tag @user.image.variant(combine_options:{gravity: :center, resize:"440x440^", crop:"440x440+0+0"}).processed %></div>
-        
-        <div class="name-font"><%= @user.name %><div>
-      </li>
-      <li class="list-inline-item">
-        <div class="name-font"><%= "プロフィール#{@user.profile}" %><div>
-        <div class="name-font"><%= "年齢#{@user.age}" %><div>
-        <div class="name-font"><%= "性別#{@user.gender}" %><div>
-        <div class="name-font"><%= "地域#{@user.area}" %><div>
-      </li>
-    </ul>
 
-  </div>
-
-  <div class="container bg-white">
-      <ul class="nav nav-tabs mb-3 nav-justified" id="myTab" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">ファンクラブ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">お気に入り投稿</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">参加イベント</a>
-        </li>
-      </ul>
-      <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-
-          <% current_user.followings.reverse_each do |user| %>
-              <section class="card">
-                <div class="card-img"><%= image_tag(user.image.variant(gravity: :center).processed, class: "img-fluid") %></div>
-                <div class="card-content">
-                  <h1 class="card-title"><%= user.name %></h1>
-                </div>
-              </section>
-          <% end %>
-  
-        </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-          <% current_user.like_posts.reverse_each do |post| %>
-            <% unless post.event? %>
-              <section class="card">
-                <div class="card-img"><%= image_tag(post.image.variant(gravity: :center).processed, class: "img-fluid") %></div>
-                <div class="card-content">
-                  <h1 class="card-title"><%= post.title %></h1>
-                  
-                </div>
-              </section>
+  <% if current_user.id == @user.id %>
+    <div class="text-right"><%= link_to "編集する", edit_user_path %></div>
+  <% end %>
+    <div class="text-center">
+        <div class="mt-5"><%= image_tag @user.image.variant(combine_options:{gravity: :center, resize:"400x400^", crop:"400x400+0+0"}).processed %></div>
+        <ul class="name-item">  
+          <li class="name-font1"><%= @user.name %></li>
+          <li class="name-font1 edit-icon">
+            <% if current_user.id == @user.id %>
+              <%= link_to edit_user_path do %>
+                <i class="fas fa-edit"></i>  
+              <% end %>             
+            <% else %>
+              <%= link_to edit_user_path do %>
+                <i class="fas fa-sms"></i>
+              <% end %>
             <% end %>
-       
-          <% end %>
-        </div>
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-          <% current_user.like_posts.reverse_each do |post| %>
-            <% if post.event? %>
-              <section class="card">
-                <div class="card-img"><%= image_tag(post.image.variant(gravity: :center).processed, class: "img-fluid") %></div>
-                <div class="card-content">
-                  <h1 class="card-title"><%= post.title %></h1>
-                  
-                </div>
-              </section>
+          </li>
+        </ul>
+
+        <% if @user.id == current_user.id %>
+
+        <% else %>
+          <% if @isRoom == true %>
+            <p><a href="/rooms/<%= @roomId %>">チャットへ</a>
+          <% else %>
+            <%= form_for @room do |f| %>
+              <%= fields_for @entry do |e| %>
+                <%= e.hidden_field :user_id, :value=> @user.id %>
+              <% end %>
+              <%= f.submit "チャットを始める" %>
             <% end %>
-       
           <% end %>
+        <% end %>
+
+        <div class="name-font2"><%= @user.profile %><div>
+        <div class="name-font2 mt-3"><%= "年齢#{@user.age}" %><div>
+        <div class="name-font2"><%= "性別#{@user.gender}" %><div>
+        <div class="name-font2"><%= "地域#{@user.area}" %><div>
+
+
+    </div>
+
+    <div class="container bg-white">
+        <ul class="nav nav-tabs mb-3 nav-justified" id="myTab" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">ファンクラブ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">お気に入り投稿</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">参加イベント</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+
+            <% current_user.followings.reverse_each do |user| %>
+              <div class="card4">
+              <%= link_to user_events_path(user), class: "" do %>
+                <div class=""><%= image_tag(user.image.variant(gravity: :center, resize: '550x400' ,crop: "500x300+0+0").processed, class: " card-img5") %></div>
+                <div>
+                  <div class="card-title5 mt-3"><%= user.name %></div><br>
+                  <a class="card-text5"><%= user.profile %></a><br>
+            
+                </div>
+              </div>
+      <% end %>
+            <% end %>
+    
+          </div>
+          <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <% current_user.like_posts.reverse_each do |post| %>
+              <% unless post.event? %>
+                <section class="card">
+                  <div class="card-img"><%= image_tag(post.image.variant(gravity: :center, resize: '550x400' ,crop: "500x300+0+0").processed, class: "img-fluid") %></div>
+                  <div class="card-content">
+                    <h1 class="card-title"><%= post.title %></h1>
+                    
+                  </div>
+                </section>
+              <% end %>
         
+            <% end %>
+          </div>
+          <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+            <% current_user.like_posts.reverse_each do |post| %>
+              <% if post.event? %>
+                <section class="card">
+                  <div class="card-img"><%= image_tag(post.image.variant(gravity: :center).processed, class: "img-fluid") %></div>
+                  <div class="card-content">
+                    <h1 class="card-title"><%= post.title %></h1>
+                    
+                  </div>
+                </section>
+              <% end %>
+        
+            <% end %>
+          
+          </div>
         </div>
-      </div>
-  </div>
+    </div>
 
 <% end %>
