--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -1,13 +1,20 @@
 <% if @user.id == current_user.id %>
+
+  <h2 class="sgin_up text-center">動画の投稿</h2>
+
   <%= form_with(model:[@user, @video], method: :post) do |f| %>
-    <div class="form-group">
-      <%= f.label :title, 'タイトル' %>
-      <%= f.text_field :title %>
+    <div class="form-group text-center field mt-5">
+      <%= f.label :title, 'タイトル' %><br>
+      <%= f.text_field :title, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
     </div>
-    <div class="form-group">
-    <%= f.label :youtube_url, 'url' %>
-      <%= f.text_field :youtube_url %>
+
+    <div class="form-group text-center field">
+    <%= f.label :youtube_url, 'YouTube_URL' %><br>
+      <%= f.text_field :youtube_url, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
     </div>
-    <%= f.submit %>
+
+    <div class="form-group text-center field mt-5">
+      <%= f.submit "動画の投稿", class: "btn btn-large btn-primary" %>
+    </div>
   <% end %>
 <% end %>
