[update] user controller (posts events videos) routes 変更

--- a/app/assets/stylesheets/members.scss
+++ b/app/assets/stylesheets/members.scss
@@ -27,10 +27,12 @@
   border-width: 2px;
 }
 
-.snsbtniti{
+.snsbtn{
   display: flex;
+  padding: 0px;
 }
 
-.snsbtniti a{
+.snsbtn a{
   font-size: 30px;
+  text-align: center;
 }
