--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,20 +5,20 @@
       <%= link_to "プロフィール", @user, class: "" %>
     </li>
     <li>
-      <%= link_to "ブログ", user_posts_path(@user), class: "" %>
+      <%= link_to "ブログ", posts_user_path(@user), class: "" %>
     </li>
     <li>
-      <%= link_to "スケジュール", user_events_path(@user), class: "" %>
+      <%= link_to "スケジュール", events_user_path(@user), class: "" %>
     </li>
     <li>
-      <%= link_to "動画", user_videos_path(@user), class: "" %>
+      <%= link_to "動画", videos_user_path(@user), class: "" %>
     </li> 
     <li>
       <%= link_to "Contact", "/", class: "" %>
     </li> 
   </ul>
 	<div >
-    <h1 class="user-name"><%= "ABOUT #{@user.name}" %></h1>
+    <h1 class="user-name text-center"><%= @user.name %></h1>
   </div>
   <div class="follow_button text-right" id="follows_buttons_<% @user.id %>">
     <%= render 'relationships/follow_button', user: @user %>
@@ -57,7 +57,7 @@
       </section>
     <% end %>
   <% end %>
-  <div class="all_look text-right"><%= link_to "もっと見る", user_events_path(@user) %></div>
+  <div class="all_look text-right"><%= link_to "もっと見る", events_user_path(@user) %></div>
   <h2 class="font8">最近の投稿</h2>
   <% @posts.each do |post| %>
     <section class="card4">
@@ -69,7 +69,7 @@
       </section>
     <% end %>
   <% end %>
-  <div class="all_look text-right"><%= link_to "もっと見る", user_posts_path(@user) %></div>
+  <div class="all_look text-right"><%= link_to "もっと見る", posts_user_path(@user) %></div>
 
 <% else %>
 
