--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -64,7 +64,7 @@
   
 
   .user-name{
-    font-size: 50px;
+    font-size: 90px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
@@ -74,7 +74,7 @@
   }
 
   .profile{
-    font-size: 30px;
+    font-size: 40px;
   }
 
 
@@ -337,3 +337,18 @@
     position: relative;
     right: 90px;
   }
+
+   //user index
+  
+   .user-search-form{
+     display: flex;
+     justify-content: center;
+   }
+
+   .user-search-container{
+     background-color: rgb(241, 241, 241);
+   }
+
+   .area-name{
+     
+   }
