--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -32,7 +32,7 @@
             <button type="submit" id="sbtn2"><i class="fas fa-search"></i></button>
           </form>
         </li>
-          <li class="nav-item"><%= link_to '新規登録', new_user_session_path, class: 'btn btn-light mr-3 sginup-btn' %></li>
+          <li class="nav-item"><%= link_to '新規登録', new_user_registration_path, class: 'btn btn-light mr-3 sginup-btn' %></li>
           <li class="nav-item"><%= link_to 'ログイン', new_user_session_path, class: 'btn btn-outline-light' %></li>
         <% end %>
       </ul>
