--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -8,7 +8,7 @@
 
     <div class="form-group text-center field mt-5">
       <%= f.label :title, 'タイトル' %><br>
-      <%= f.text_field :title %>
+      <%= f.text_field :title, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
     </div>
 
     <div class="form-group text-center field mt-5">
