--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,36 @@
 
+<%= search_form_for @user_search, url: users_path do |f| %>
+  <div class="user-search-form mt-4">
+    <div><%= f.search_field :name_cont, class: 'form-control1 me-sm-2', id: "submit-form2"%></div>
+    <button type="button" class="btn btn-primary ml-3" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">さらに絞る</button>
+  </div>
+  <div class="collapse" id="collapseExample">
+    <div class="user-search-container p-3">
+      <div class="search-gender text-center mb-4">
+        <div class="text-center mb-2 user-search-fonts">性別</div>
+        <% User.genders.keys.each_with_index do |key, i| %>
+          <%= f.check_box :gender_eq_any, {multiple: true}, i, nil %>
+          <%= key %>
+        <% end %>
+      </div>
 
-<div> 
-  <%= search_form_for @user_search, url: users_path do |f| %>
-    <%= f.search_field :name_cont, class: 'form-control me-sm-2', id: "submit-form2"%>
+      <div class="search-area">
+        <div class="text-center mb-2 user-search-fonts">活動地域</div>
+        <% User.areas.keys.each_with_index do |key, i| %>
+          <% if i != 0 %>
+            <%= f.check_box :area_eq_any, {multiple: true}, i, nil %>
+            <%= key %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="form-group text-center field mt-5">
+    <%= f.submit "検索", class: "btn btn-large btn-primary" %>
+  </div>
+<% end %>
+ 
 
-    <% User.genders.keys.each_with_index do |key, i| %>
-      <%= f.check_box :gender_eq_any, {multiple: true}, i, nil %>
-      <%= key %>
-    <% end %>
-
-    <% User.areas.keys.each_with_index do |key, i| %>
-      <% if i != 0 %>
-      <%= f.check_box :area_eq_any, {multiple: true}, i, nil %>
-      <%= key %>
-      <% end %>
-    <% end %>
-   
-    <%= f.button :type => "submit", id: 'submit-btn2' do %>
-      <i class='fas fa-search'></i>
-    <% end %>
-  <% end %>
-</div>
 
 <div class="container user_result" style="">
   <% @user_results.reverse_each do |user| %>
