--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -135,3 +135,18 @@
     justify-content: center;
   }
 
+  .post-button{
+    font-size: 50px;
+  }
+
+  .post-user-box{
+    display: flex;
+  }
+
+  .post-user-image{
+    margin: 20px;
+  }
+
+  .post-user-name{
+    font-size: 40px;
+  }
