--- a/app/views/home/makefanclub.html.erb
+++ b/app/views/home/makefanclub.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center mt-3">
-  <h2 class="font2">あなたのだけのファンクラブを作ろう</h2>
+  <h2 class="font2">あなたのファンクラブを作ろう</h2>
 </div>
 
 <div class="row">
