--- a/app/views/videos/edit.html.erb
+++ b/app/views/videos/edit.html.erb
@@ -1,8 +1,11 @@
 <% if @video.user_id == current_user.id %>
 
-  <h2 class="sgin_up text-center">編集</h2>
+  <h2 class="sgin_up text-center">動画情報編集</h2>
 
-  <%= form_with(model:[@video], method: :patch) do |f| %>
+  <%= form_with(model:[@video], method: :patch, local: true) do |f| %>
+
+    <%= render 'layouts/error_messages', model: f.object %>
+
     <div class="form-group text-center field mt-5">
       <%= f.label :title, 'タイトル' %><br>
       <%= f.text_field :title, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
