--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,10 +9,32 @@
 }
 
 .font2{
-    font-size: 55px;
-    font-weight: bold;
-    border-bottom: thick double #741c9c;
-}
+    font-size: 70px;
+    position: relative;
+    display: inline-block;
+    padding: 0 55px;
+    border-bottom: solid;
+    border-color: #741c9c;
+    
+  }
+  
+  .font2:before, .font2:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    display: inline-block;
+    width: 45px;
+    height: 2px;
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+  }
+  
+  .font2:before {
+    left:0;
+  }
+  .font2:after {
+    right: 0;
+  }
 
 .font3{
   font-weight: bold;
@@ -48,24 +70,80 @@
   font-size: 25px;
 }
 
+.search-genre{
 
-.btn-flat-vertical-border {
-  position: relative;
+  padding-top: 30px;
+  padding-bottom: 80px;
+}
+
+.btn-stitch {
+  margin-top: 80px;
+  margin-bottom: 60px;
+  font-size: 50px;
   display: inline-block;
-  font-weight: bold;
-  padding: 1.5em 5em;
+  padding: 0.5em 1em;
   text-decoration: none;
-  border-left: solid 4px #741c9c;
-  border-right: solid 4px #741c9c;
-  color: #741c9c;
-  background: #f6e4ff;
-  transition: .4s;
+  background: #9032bb;
+  color: #FFF;
+  border-radius: 4px;
+  box-shadow: 0px 0px 0px 8px #9032bb;
+  border: dashed 8px #FFF;
+}
+
+.btn-stitch:hover {
+  background: #4e0d6d;
+  box-shadow: 0px 0px 0px 8px #4e0d6d;
+  border: dashed 8px #FFF;
 }
 
 .btn-flat-vertical-border:hover {
   background: #741c9c;
   color: #FFF;
 }
+
+.btn-circle-stitch {
+  font-size: 40px;
+  margin: 40px 40px 0px 40px;
+  display: inline-block;
+  text-decoration: none;
+  background: #9032bb;
+  color: #FFF;
+  width: 180px;
+  height: 180px;
+  line-height: 170px;
+  border-radius: 50%;
+  text-align: center;
+
+  box-shadow: 0px 0px 0px 10px #9032bb;
+  border: dashed 6px #FFF;
+  transition: .4s;
+}
+
+.btn-circle-stitch-center {
+  font-size: 40px;
+  margin-top: 30px;
+  display: inline-block;
+  text-decoration: none;
+  background: #9032bb;
+  color: #FFF;
+  width: 220px;
+  height: 220px;
+  line-height: 210px;
+  border-radius: 50%;
+  text-align: center;
+
+  box-shadow: 0px 0px 0px 10px #9032bb;
+  border: dashed 7px #FFF;
+  transition: .4s;
+  position: relative;
+  top: 15px;
+}
+
+.btn-circle-stitch:hover {
+  background: #4e0d6d;
+  box-shadow: 0px 0px 0px 10px #4e0d6d;
+}
+
 
 
 
