--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -17,10 +17,13 @@
    color: rgb(240, 202, 35);
  }
 
+ 
+.user-show-container1{
+  background-color: #f8e8ff;
+}
 
-
-.table-ul {
-    background-color: #c0c0c0;
+.table-ul1 {
+    background-color: #741c9c;
     display: table;
     table-layout: fixed;
     text-align: center;
@@ -30,40 +33,42 @@
       bottom: 0px;
     }
   }
-  .table-ul li {
+
+  .table-ul1 li {
     border-right: 1px solid #fff;
     display: table-cell;
     vertical-align: middle;
-    outline: 1px solid rgb(88, 20, 119);
+    outline: 1px solid rgb(250, 240, 255);
     outline-offset: -10px;
   }
 
-  .table-ul li:last-child {
+  .table-ul1 li:last-child {
     border-right: 0;
   }
 
-  .table-ul li a {
-    color: rgb(35, 31, 39);
+  .table-ul1 li a {
+    color: rgb(255, 255, 255);
     display: block;
     font-size: 25px;
     text-decoration: none;
     padding: 30px 0px;
   }
 
-  .table-ul li a:hover {
-    background-color: #5c5c5c;
-    color: #ccc;
+  .table-ul1 li a:hover {
+    background-color: #912fbe;
+    color: rgb(255, 255, 255);
   }
 
-  .table-ul li.current a {
-    color: #ccc;
-    background-color: #1f1f1f;
+  .table-ul1 li.current a {
+    color: rgb(255, 255, 255);
+    background-color: #b94deb;
   }
+
 
 // profile
   
 
-  .user-name{
+  .user-name-1{
     font-size: 90px;
     margin-left: auto;
     margin-right: auto;
@@ -88,7 +93,7 @@
   margin-top: 20px;
   width: 1120px;
   border-bottom: solid;
-  border-color: #741c9c;;
+  border-color: #ffb0fb;;
 }
 
 .member {
@@ -235,14 +240,14 @@
     font-size: 30px;
   }
 
-  .font8{
+  .font8-1{
     font-size: 40px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     width: 1120px;
     border-bottom: solid;
-    border-color: #741c9c;;
+    border-color: #ff66f2;;
   }
 
   // user show 近日のイベント
