--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,10 @@
 <h2 class="sgin_up text-center">イベント投稿</h2>
 
-<%= form_with(model:[@event], method: :event) do |f| %>
+<%= form_with(model:[@event], method: :event,local: true) do |f| %>
+
+
+<%= render 'layouts/error_messages', model: f.object %>
+
 
   <div class="form-group text-center field mt-5">
     <%= f.label :image, 'プロフィール画像' %><br>
