--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,6 +1,9 @@
   <h2 class="sgin_up text-center">メンバーの追加</h2>
 
-<%= form_with(model:[@member], method: :post) do |f| %>
+<%= form_with(model:[@member], method: :post, local: true) do |f| %>
+
+  <%= render 'layouts/error_messages', model: f.object %>
+
   <div class="form-group text-center field mt-4">
     <%= f.label :image, 'プロフィール画像' %><br>
     <%= f.file_field :image, class: "form-control image-input", type:"file", id:"formFile", style: "width: 500px;" %>
