--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,10 @@
 <h2 class="sgin_up text-center">画像編集</h2>
 
 
-<%= form_with(model:[@post], method: :patch) do |f| %>
+<%= form_with(model:[@post], method: :patch, local: true) do |f| %>
+
+  <%= render 'layouts/error_messages', model: f.object %>
+
   <div class="text-center mt-5">
       <%= f.file_field :image, class: "form-control image-input", type:"file", id:"formFile", style: "width: 500px;"  %>
     </div>
