--- a/app/views/relationships/_follow_button.html.erb
+++ b/app/views/relationships/_follow_button.html.erb
@@ -3,7 +3,7 @@
     <% if current_user.following?(user) %>
       <%= form_with(model: current_user.relationships.find_by(follow_id: user.id), method: :delete, remote: true) do |f| %>
         <%= hidden_field_tag :follow_id, user.id %>
-        <%= button_tag type: 'submit', class: 'btn btn-default' do %>
+        <%= button_tag type: 'submit', class: 'btn ' do %>
           <i class="fas fa-star fa-3x follow"></i>
         <% end %>
       <% end %>
