--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,10 @@
 <h2 class="sgin_up text-center">プロフィール編集</h2>
 
 <% if !@user.admin? %> 
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@user, local: true) do |f| %>
+
+    <%= render 'layouts/error_messages', model: f.object %>
+
     <div class="form-group text-center field">
       <%= f.label :name, '名前', class: "mt-3" %><br>
       <%= f.text_field :name, class: "form-control", id: "exampleInputEmail1", style: "width: 300px;" %>
@@ -37,7 +40,9 @@
     </div>
     <% end %>
 <% else %>
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@user, local: true) do |f| %>
+
+    <%= render 'layouts/error_messages', model: f.object %>
 
     <div class="form-group text-center field">
       <%= f.label :name, 'チーム名', class: "mt-3 " %><br>
@@ -62,6 +67,11 @@
     <div class="form-group text-center field">
       <%= f.label :image, 'プロフィール画像' %><br>
       <%= f.file_field :image, class: "form-control image-input", type:"file", id:"formFile", style: "width: 500px;" %>
+    </div>
+
+    <div class="form-group text-center field">
+      <%= f.label :theme, 'テーマ' %><br>
+      <%= f.select :theme, options_for_select((1..10).to_a), { include_blank: '選択'}, class: "form-select", label: "Default select example", style: "width: 200px;" %>
     </div>
 
     <div class="form-group text-center field">
